implement listing creation
