# src/main/java/io/github/akhabali/controller/GenericErrorAdvice.java
@@ -3,10 +3,10 @@ package io.github.akhabali.controller;
 import io.github.akhabali.dto.ErrorDto;
 import io.github.akhabali.errors.DealerAlreadyExistsException;
 import io.github.akhabali.errors.DealerNotFoundException;
+import io.github.akhabali.errors.ListingAlreadyExistsException;
+import io.github.akhabali.errors.ListingNotFoundException;
 import lombok.extern.log4j.Log4j2;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -20,18 +20,36 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 public class GenericErrorAdvice {
 
     @ResponseBody
-    @ExceptionHandler({DealerNotFoundException.class})
+    @ExceptionHandler(value = {DealerNotFoundException.class})
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ErrorDto notFound(DealerNotFoundException ex) {
+    public ErrorDto dealerNotFound(DealerNotFoundException ex) {
         log.debug("Error: ", ex);
         return new ErrorDto(ex.getMessage());
 
     }
 
     @ResponseBody
-    @ExceptionHandler(DealerAlreadyExistsException.class)
+    @ExceptionHandler({DealerAlreadyExistsException.class})
     @ResponseStatus(HttpStatus.CONFLICT)
-    public ErrorDto alreadyExists(DealerAlreadyExistsException ex) {
+    public ErrorDto dealerAlreadyExists(DealerAlreadyExistsException ex) {
+        log.debug("Error: ", ex);
+        return new ErrorDto(ex.getMessage());
+    }
+
+
+    @ResponseBody
+    @ExceptionHandler(value = {ListingNotFoundException.class})
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ErrorDto listingNotFound(ListingNotFoundException ex) {
+        log.debug("Error: ", ex);
+        return new ErrorDto(ex.getMessage());
+
+    }
+
+    @ResponseBody
+    @ExceptionHandler({ListingAlreadyExistsException.class})
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ErrorDto listingAlreadyExists(ListingAlreadyExistsException ex) {
         log.debug("Error: ", ex);
         return new ErrorDto(ex.getMessage());
     }
